--- a/Ocean.Inside.Project/Ocean.Inside.Project.csproj
+++ b/Ocean.Inside.Project/Ocean.Inside.Project.csproj
@@ -244,8 +244,12 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\PagedList.css" />
-    <Content Include="css\css.css" />
-    <Content Include="css\style.css" />
+    <Content Include="css\css.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="css\style.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -267,11 +271,10 @@
     <Content Include="fonts\materialdesignicons-webfont.ttf" />
     <Content Include="fonts\materialdesignicons-webfont.woff" />
     <Content Include="fonts\materialdesignicons-webfont.woff2" />
+    <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Properties\PublishProfiles\ocean-inside - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\okeanvnutry.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
-    <Content Include="images\100x100.jpg" />
-    <Content Include="images\1170x440.jpg" />
-    <Content Include="images\1170x780.jpg" />
     <Content Include="images\About\Maria_mini.jpg" />
     <Content Include="images\About\place-01-118x89.jpg" />
     <Content Include="images\About\place-01-118x89.png" />
@@ -296,40 +299,9 @@
     <Content Include="images\Layout\1920x900.jpg" />
     <Content Include="images\Layout\1920x900_1.jpg" />
     <Content Include="images\Layout\1920x900_2.jpg" />
-    <Content Include="images\270x160.jpg" />
-    <Content Include="images\270x180.jpg" />
-    <Content Include="images\270x200.jpg" />
-    <Content Include="images\270x220.jpg" />
-    <Content Include="images\270x240.jpg" />
-    <Content Include="images\270x280.jpg" />
-    <Content Include="images\270x310.jpg" />
-    <Content Include="images\270x315.jpg" />
-    <Content Include="images\270x370.jpg" />
-    <Content Include="images\270x430.jpg" />
-    <Content Include="images\30x30.jpg" />
-    <Content Include="images\350x315.jpg" />
-    <Content Include="images\370x200.jpg" />
-    <Content Include="images\370x240.jpg" />
-    <Content Include="images\370x270.jpg" />
-    <Content Include="images\370x310.jpg" />
-    <Content Include="images\40x40.jpg" />
-    <Content Include="images\478x400.jpg" />
-    <Content Include="images\478x799.jpg" />
-    <Content Include="images\479x400.jpg" />
-    <Content Include="images\60x60.jpg" />
-    <Content Include="images\70x70.jpg" />
-    <Content Include="images\770x380.jpg" />
-    <Content Include="images\80x80.jpg" />
-    <Content Include="images\959x802.jpg" />
     <Content Include="images\Home\background-05-1920x900.jpg" />
     <Content Include="images\Home\background-06-1920x900.jpg" />
     <Content Include="images\Home\background-07-1920x900.jpg" />
-    <Content Include="images\Home\box-offer-01-370x310.jpg" />
-    <Content Include="images\Home\box-offer-02-370x310.jpg" />
-    <Content Include="images\Home\box-offer-03-370x310.jpg" />
-    <Content Include="images\Home\box-offer-04-370x310.jpg" />
-    <Content Include="images\Home\box-offer-05-370x310.jpg" />
-    <Content Include="images\Home\box-offer-06-370x310.jpg" />
     <Content Include="images\Layout\icon-01-16x21.png" />
     <Content Include="images\Layout\icon-02-19x19.png" />
     <Content Include="images\Layout\icon-03-12x20.png" />
@@ -341,26 +313,15 @@
     <Content Include="images\Home\icon-09-20x20.png" />
     <Content Include="images\Home\icon-10-25x24.png" />
     <Content Include="images\Home\icon-11-20x18.png" />
-    <Content Include="images\icon-18-18x15.png" />
-    <Content Include="images\icon-22-18x22.png" />
-    <Content Include="images\icon-22-9x11.png" />
-    <Content Include="images\icon-23-22x18.png" />
-    <Content Include="images\icon-24-24x20.png" />
-    <Content Include="images\icon-25-20x18.png" />
-    <Content Include="images\icon-26-14x21.png" />
-    <Content Include="images\icon-27-21x18.png" />
-    <Content Include="images\icon-28-17x19.png" />
-    <Content Include="images\icon-29-20x20.png" />
-    <Content Include="images\icon-30-25x24.png" />
-    <Content Include="images\icon-31-24x19.png" />
-    <Content Include="images\icon-32-20x20.png" />
-    <Content Include="images\icon-33-20x20.png" />
-    <Content Include="images\icon-34-16x21.png" />
-    <Content Include="images\icon-35-19x17.png" />
-    <Content Include="images\icon-36-19x17.png" />
     <Content Include="images\Layout\logo.jpg" />
+    <Content Include="images\Layout\logo.png" />
     <Content Include="images\Layout\logo_2.jpg" />
-    <Content Include="images\photoswipe-controls.png" />
+    <Content Include="images\Layout\phone.png" />
+    <Content Include="images\Tours\Испания\1.jpg" />
+    <Content Include="images\Tours\Испания\4.jpg" />
+    <Content Include="images\Tours\Испания\5.jpg" />
+    <Content Include="images\Tours\Испания\6.jpg" />
+    <Content Include="images\Tours\Испания\7.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="js\core.min.js" />
@@ -402,10 +363,10 @@
     <Content Include="Views\Manage\ManageLogins.cshtml" />
     <Content Include="Views\Manage\SetPassword.cshtml" />
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
-    <None Include="Views\Shared\404.cshtml" />
-    <None Include="Views\Shared\503.cshtml" />
+    <Content Include="Views\Shared\404.cshtml" />
+    <Content Include="Views\Shared\503.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <None Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\_HotelTourItem.cshtml" />
     <Content Include="Views\Shared\_HeaderSliderPartial.cshtml" />
     <Content Include="Views\Tour\AddTour.cshtml" />
@@ -419,8 +380,8 @@
     <Content Include="Views\Tour\AddWaste.cshtml" />
     <Content Include="Views\Tour\EditStep.cshtml" />
     <Content Include="Views\Shared\_CallBox.cshtml" />
-    <None Include="Views\Tour\HotelTours.cshtml" />
-    <None Include="Views\Tour\HotelTour.cshtml" />
+    <Content Include="Views\Tour\HotelTours.cshtml" />
+    <Content Include="Views\Tour\HotelTour.cshtml" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -429,6 +390,7 @@
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
@@ -442,7 +404,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Authentication\" />
     <Folder Include="images\Gallery\" />
-    <Folder Include="images\Tours\" />
     <Folder Include="images\Visas\" />
     <Folder Include="Views\Blog\" />
     <Folder Include="Views\Email\" />
